add one more controller forgotpassword and test apis for that successfully
